Project Completed. Looked back at design file and corrected a few text alignment issues. Adjusted bottom banner picture. Project Completed

--- a/index.css
+++ b/index.css
@@ -19,7 +19,9 @@ dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
 	outline: 0;
     }
     * { 
-        max-width:100%
+        max-width:100%;
+        overflow-x: hidden;
+        
     }
     html { 
         font-size: 62.5%;
@@ -133,6 +135,7 @@ nav a {
     width:60%;
     display: inline-block;
     margin-left: 50px;
+    text-align: center;
 }
 
 h1 { 
@@ -169,12 +172,16 @@ span {
 }
 
 .bottom-banner { 
-        height: 300px;
+        height: 280px;
         margin-top:50px;
+        
 }
 #footer-img { 
+    object-fit: cover;
     width: 100%;
-    height:100%;
+    height:280px;
+    
+
     
 }
 
